Fix text to not overflow under the chat action btns

--- a/webapp/titanembeds/static/css/embed.css
+++ b/webapp/titanembeds/static/css/embed.css
@@ -964,6 +964,10 @@ p.mentioned span.chatmessage {
   #send-msg-btn {
     display: block;
   }
+
+  textarea.materialize-textarea {
+    max-width: calc(100% - 120px);
+  }
 }
 
 #upload-file-btn {
